jwt authetication working, ugly(ish) solution in swagger
